feat: add basic account view

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             
             <div class="dialog__spinner"></div>
 
-            <div class="dialog__view">
+            <div class="dialog__body">
                 <input class="dialog__tab-input" type="radio" name="tab-selector" id="tab-selector-1" checked>
                 <input class="dialog__tab-input" type="radio" name="tab-selector" id="tab-selector-2">
                 <input class="dialog__tab-input" type="radio" name="tab-selector" id="tab-selector-3">
@@ -42,7 +42,63 @@
                     </label>
                 </header>
 
-                <div class="dialog__account"></div>
+                <div class="dialog__tab-content" id="tab-content-1">
+                    <div class="row row--h-full">
+                        <div class="row__section">
+                            <div class="column column--h-full">
+                                <div class="column__section">
+                                    <h2 class="text text--section">Solde</h2>
+                                    <p class="text text--number text--green">1,000,000$</p>
+                                </div>
+                                
+                                <div class="column__section">
+                                    <h2 class="text text--section">Pripriétaire du compte</h2>
+                                    <p class="text text--name">Arthur Popov</p>
+                                </div>
+
+                                <div class="column__section">
+                                    <h2 class="text text--section">Numéro du compte</h2>
+                                    <p class="text text--number">0123456789</p>
+                                </div>
+
+                                <div class="paper paper--mt-auto">
+                                    <h3 class="paper__header">rib enregistrés</h3>
+                                    <div class="paper__body"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row__section">
+                            <div class="paper paper--h-full">
+                                <h3 class="paper__header">historique</h3>
+                                <div class="paper__body"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="dialog__tab-content" id="tab-content-2">
+                    <div class="group">
+                        <div class="group__section"></div>
+                        <div class="group__section"></div>
+                    </div>
+                </div>
+                <div class="dialog__tab-content" id="tab-content-3">
+                    <div class="group">
+                        <div class="group__section"></div>
+                        <div class="group__section"></div>
+                    </div>
+                </div>
+                <div class="dialog__tab-content" id="tab-content-4">
+                    <div class="group">
+                        <div class="group__section"></div>
+                        <div class="group__section"></div>
+                    </div>
+                </div>
+                <div class="dialog__tab-content" id="tab-content-5">
+                    <div class="group">
+                        <div class="group__section"></div>
+                        <div class="group__section"></div>
+                    </div>
+                </div>
             </div>
 
         </main>
