--- a/index.html
+++ b/index.html
@@ -6,94 +6,127 @@
         <link rel="icon" type="image/png" href="/src/assets/images/maze.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;600;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;600;700&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>FailyBank</title>
     </head>
 
+    <!-- Page -->
     <body class="page">
 
+        <!-- Dialog -->
         <main class="dialog dialog--loaded">
             
+            <!-- Dialog spinner -->
             <div class="dialog__spinner"></div>
 
-            <div class="dialog__body">
-                <input class="dialog__tab-input" type="radio" name="tab-selector" id="tab-selector-1" checked>
-                <input class="dialog__tab-input" type="radio" name="tab-selector" id="tab-selector-2">
-                <input class="dialog__tab-input" type="radio" name="tab-selector" id="tab-selector-3">
-                <input class="dialog__tab-input" type="radio" name="tab-selector" id="tab-selector-4">
-                <input class="dialog__tab-input" type="radio" name="tab-selector" id="tab-selector-5">
+            <!-- Dialog Content -->
+            <div class="dialog__content">
+                <input class="dialog__input" type="radio" name="tab-selector" id="tab-selector-1" checked>
+                <input class="dialog__input" type="radio" name="tab-selector" id="tab-selector-2">
+                <input class="dialog__input" type="radio" name="tab-selector" id="tab-selector-3">
+                <input class="dialog__input" type="radio" name="tab-selector" id="tab-selector-4">
+                <input class="dialog__input" type="radio" name="tab-selector" id="tab-selector-5">
 
-                <header class="tab-list">
-                    <label class="tab" for="tab-selector-1" id="tab-1">
-                        <span class="tab__text">Mon compte</span>
-                    </label>
-                    <label class="tab" for="tab-selector-2" id="tab-2">
-                        <span class="tab__text">Déposer</span>
-                    </label>
-                    <label class="tab" for="tab-selector-3" id="tab-3">
-                        <span class="tab__text">Transférer</span>
-                    </label>
-                    <label class="tab" for="tab-selector-4" id="tab-4">
-                        <span class="tab__text">Retirer</span>
-                    </label>
-                    <label class="tab" for="tab-selector-5" id="tab-5">
-                        <span class="tab__text">Entreprise</span>
-                    </label>
+                <!-- Dialog header -->
+                <header class="dialog__header">
+                    <img class="dialog__logo" src="/src/assets/images/logo.svg" alt="Maze Bank logo">
+                    <div class="tab-list">
+                        <label class="tab-list__item" for="tab-selector-1" id="tab-1">
+                            <span class="text text--tab">Mon compte</span>
+                        </label>
+                        <label class="tab-list__item" for="tab-selector-2" id="tab-2">
+                            <span class="text text--tab">Déposer</span>
+                        </label>
+                        <label class="tab-list__item" for="tab-selector-3" id="tab-3">
+                            <span class="text text--tab">Transférer</span>
+                        </label>
+                        <label class="tab-list__item" for="tab-selector-4" id="tab-4">
+                            <span class="text text--tab">Retirer</span>
+                        </label>
+                        <label class="tab-list__item" for="tab-selector-5" id="tab-5">
+                            <span class="text text--tab">Entreprise</span>
+                        </label>
+                    </div>
+                    <div class="toggle-button">
+                        <input class="toggle-button__input" type="checkbox">
+                        <svg class="toggle-button__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor">
+                            <path d="M256 118a22 22 0 01-22-22V48a22 22 0 0144 0v48a22 22 0 01-22 22zM256 486a22 22 0 01-22-22v-48a22 22 0 0144 0v48a22 22 0 01-22 22zM369.14 164.86a22 22 0 01-15.56-37.55l33.94-33.94a22 22 0 0131.11 31.11l-33.94 33.94a21.93 21.93 0 01-15.55 6.44zM108.92 425.08a22 22 0 01-15.55-37.56l33.94-33.94a22 22 0 1131.11 31.11l-33.94 33.94a21.94 21.94 0 01-15.56 6.45zM464 278h-48a22 22 0 010-44h48a22 22 0 010 44zM96 278H48a22 22 0 010-44h48a22 22 0 010 44zM403.08 425.08a21.94 21.94 0 01-15.56-6.45l-33.94-33.94a22 22 0 0131.11-31.11l33.94 33.94a22 22 0 01-15.55 37.56zM142.86 164.86a21.89 21.89 0 01-15.55-6.44l-33.94-33.94a22 22 0 0131.11-31.11l33.94 33.94a22 22 0 01-15.56 37.55zM256 358a102 102 0 11102-102 102.12 102.12 0 01-102 102z"/>
+                        </svg>
+                        <div class="toggle-button__track">
+                            <div class="toggle-button__handle"></div>
+                        </div>
+                        <svg class="toggle-button__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor">
+                            <path d="M264 480A232 232 0 0132 248c0-94 54-178.28 137.61-214.67a16 16 0 0121.06 21.06C181.07 76.43 176 104.66 176 136c0 110.28 89.72 200 200 200 31.34 0 59.57-5.07 81.61-14.67a16 16 0 0121.06 21.06C442.28 426 358 480 264 480z"/>
+                        </svg>
+                    </div>
                 </header>
 
-                <div class="dialog__tab-content" id="tab-content-1">
+                <!-- Dialog body / account -->
+                <div class="dialog__body" id="tab-content-1">
                     <div class="row row--h-full">
                         <div class="row__section">
                             <div class="column column--h-full">
                                 <div class="column__section">
-                                    <h2 class="text text--section">Solde</h2>
-                                    <p class="text text--number text--green">1,000,000$</p>
+                                    <h2 class="text text--title">Solde</h2>
+                                    <p class="text text--balance text--green">1,000,000$</p>
                                 </div>
                                 
                                 <div class="column__section">
-                                    <h2 class="text text--section">Pripriétaire du compte</h2>
+                                    <h2 class="text text--title">Propriétaire du compte</h2>
                                     <p class="text text--name">Arthur Popov</p>
                                 </div>
 
                                 <div class="column__section">
-                                    <h2 class="text text--section">Numéro du compte</h2>
+                                    <h2 class="text text--title">Numéro du compte</h2>
                                     <p class="text text--number">0123456789</p>
                                 </div>
 
-                                <div class="paper paper--mt-auto">
-                                    <h3 class="paper__header">rib enregistrés</h3>
+                                <div class="paper">
+                                    <div class="paper__header">
+                                        <h3 class="text text--title">rib enregistrés</h3>
+                                    </div>
                                     <div class="paper__body"></div>
                                 </div>
                             </div>
                         </div>
                         <div class="row__section">
-                            <div class="paper paper--h-full">
-                                <h3 class="paper__header">historique</h3>
+                            <div class="paper">
+                                <div class="paper__header">
+                                    <h3 class="text text--title">historique</h3>
+                                </div>
                                 <div class="paper__body"></div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="dialog__tab-content" id="tab-content-2">
+
+                <!-- Dialog body / deposit -->
+                <div class="dialog__body" id="tab-content-2">
                     <div class="group">
                         <div class="group__section"></div>
                         <div class="group__section"></div>
                     </div>
                 </div>
-                <div class="dialog__tab-content" id="tab-content-3">
+
+                <!-- Dialog body / transfer -->
+                <div class="dialog__body" id="tab-content-3">
                     <div class="group">
                         <div class="group__section"></div>
                         <div class="group__section"></div>
                     </div>
                 </div>
-                <div class="dialog__tab-content" id="tab-content-4">
+
+                <!-- Dialog body / withdraw -->
+                <div class="dialog__body" id="tab-content-4">
                     <div class="group">
                         <div class="group__section"></div>
                         <div class="group__section"></div>
                     </div>
                 </div>
-                <div class="dialog__tab-content" id="tab-content-5">
+
+                <!-- Dialog body / enterprise -->
+                <div class="dialog__body" id="tab-content-5">
                     <div class="group">
                         <div class="group__section"></div>
                         <div class="group__section"></div>
