feat: add overflow feature on paper body

--- a/index.html
+++ b/index.html
@@ -89,7 +89,22 @@
                                         <div class="paper__header">
                                             <h3 class="text text--title">rib enregistrés</h3>
                                         </div>
-                                        <div class="paper__body"></div>
+                                        <div class="paper__body">
+                                            <div class="paper__frame">
+                                                <div class="paper__overflow paper__overflow--red"></div>
+                                                <div class="paper__overflow paper__overflow--green"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="column__section">
+                                    <div class="row">
+                                        <div class="row__section">
+                                            <input class="input" type="text" placeholder="Ajouter un RIB...">
+                                        </div>
+                                        <div class="row__section row__section--fixed">
+                                            <button class="button">Ajouter</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
