--- a/index.html
+++ b/index.html
@@ -454,10 +454,10 @@
                     </div>
                     <div class="grid__item grid__item--col-span-2">
                         <div class="column column--no-gap">
-                            <h3 class="text text--title">ajouter un rib</h3>
+                            <h3 class="text text--title">ajouter un code swift</h3>
                             <div class="row">
                                 <div class="row__section">
-                                    <input class="input" type="text" placeholder="Numéro du RIB...">
+                                    <input class="input" type="text" placeholder="Entrer le numéro du code SWIFT...">
                                 </div>
                                 <div class="row__section row__section--fixed">
                                     <button class="button button--primary">
@@ -745,14 +745,18 @@
             <!-- Dialog body / transfer -->
             <div class="dialog__body" id="tab-content-3">
                 <div class="grid grid--transfer">
-                    <div class="grid__item grid__item--col-span-2">
+                    <div class="grid__item">
                         <h3 class="text text--title">Montant du transfert</h3>
                         <input class="input" type="text" placeholder="Entrer le montant du transfert...">
+                    </div>
+                    <div class="grid__item">
+                        <h3 class="text text--title">code swift du déstinataire</h3>
+                        <input class="input" type="text" placeholder="Entrer le code SWIFT du déstinataire...">
                     </div>
                     <div class="grid__item grid__item--row-span-5">
                         <div class="column column--no-gap">
                             <div class="column__section">
-                                <h3 class="text text--title">rib enregistrés</h3>
+                                <h3 class="text text--title">codes swift enregistrés</h3>
                             </div>
                             <div class="column__section column__section--fluid">
                                 <div class="paper">
@@ -763,105 +767,40 @@
                                                     <td class="table__cell">
                                                         <h4 class="text text--name">Lena Silvo</h4>
                                                     </td>
-                                                    <td class="table__cell">
+                                                    <td class="table__cell table__cell--right table__cell--large">
                                                         <p class="text text--swift">0123456789</p>
-                                                    </td>
-                                                    <td class="table__cell table__cell--right">
-                                                        <button class="icon-button">
-                                                            <svg class="icon-button__icon"
-                                                                xmlns="http://www.w3.org/2000/svg" width="16"
-                                                                heigth="16" viewBox="0 0 512 512" fill="currentColor">
-                                                                <path
-                                                                    d="M296 64h-80a7.91 7.91 0 00-8 8v24h96V72a7.91 7.91 0 00-8-8z"
-                                                                    fill="none" />
-                                                                <path
-                                                                    d="M432 96h-96V72a40 40 0 00-40-40h-80a40 40 0 00-40 40v24H80a16 16 0 000 32h17l19 304.92c1.42 26.85 22 47.08 48 47.08h184c26.13 0 46.3-19.78 48-47l19-305h17a16 16 0 000-32zM192.57 416H192a16 16 0 01-16-15.43l-8-224a16 16 0 1132-1.14l8 224A16 16 0 01192.57 416zM272 400a16 16 0 01-32 0V176a16 16 0 0132 0zm32-304h-96V72a7.91 7.91 0 018-8h80a7.91 7.91 0 018 8zm32 304.57A16 16 0 01320 416h-.58A16 16 0 01304 399.43l8-224a16 16 0 1132 1.14z" />
-                                                            </svg>
-                                                        </button>
                                                     </td>
                                                 </tr>
                                                 <tr class="table__row">
                                                     <td class="table__cell">
                                                         <h4 class="text text--name">Elina Deau</h4>
                                                     </td>
-                                                    <td class="table__cell">
+                                                    <td class="table__cell table__cell--right table__cell--large">
                                                         <p class="text text--swift">0123456789</p>
-                                                    </td>
-                                                    <td class="table__cell table__cell--right">
-                                                        <button class="icon-button">
-                                                            <svg class="icon-button__icon"
-                                                                xmlns="http://www.w3.org/2000/svg" width="16"
-                                                                heigth="16" viewBox="0 0 512 512" fill="currentColor">
-                                                                <path
-                                                                    d="M296 64h-80a7.91 7.91 0 00-8 8v24h96V72a7.91 7.91 0 00-8-8z"
-                                                                    fill="none" />
-                                                                <path
-                                                                    d="M432 96h-96V72a40 40 0 00-40-40h-80a40 40 0 00-40 40v24H80a16 16 0 000 32h17l19 304.92c1.42 26.85 22 47.08 48 47.08h184c26.13 0 46.3-19.78 48-47l19-305h17a16 16 0 000-32zM192.57 416H192a16 16 0 01-16-15.43l-8-224a16 16 0 1132-1.14l8 224A16 16 0 01192.57 416zM272 400a16 16 0 01-32 0V176a16 16 0 0132 0zm32-304h-96V72a7.91 7.91 0 018-8h80a7.91 7.91 0 018 8zm32 304.57A16 16 0 01320 416h-.58A16 16 0 01304 399.43l8-224a16 16 0 1132 1.14z" />
-                                                            </svg>
-                                                        </button>
                                                     </td>
                                                 </tr>
                                                 <tr class="table__row">
                                                     <td class="table__cell">
                                                         <h4 class="text text--name">Quentin Cooper</h4>
                                                     </td>
-                                                    <td class="table__cell">
+                                                    <td class="table__cell table__cell--right table__cell--large">
                                                         <p class="text text--swift">0123456789</p>
-                                                    </td>
-                                                    <td class="table__cell table__cell--right">
-                                                        <button class="icon-button">
-                                                            <svg class="icon-button__icon"
-                                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
-                                                                fill="currentColor">
-                                                                <path
-                                                                    d="M296 64h-80a7.91 7.91 0 00-8 8v24h96V72a7.91 7.91 0 00-8-8z"
-                                                                    fill="none" />
-                                                                <path
-                                                                    d="M432 96h-96V72a40 40 0 00-40-40h-80a40 40 0 00-40 40v24H80a16 16 0 000 32h17l19 304.92c1.42 26.85 22 47.08 48 47.08h184c26.13 0 46.3-19.78 48-47l19-305h17a16 16 0 000-32zM192.57 416H192a16 16 0 01-16-15.43l-8-224a16 16 0 1132-1.14l8 224A16 16 0 01192.57 416zM272 400a16 16 0 01-32 0V176a16 16 0 0132 0zm32-304h-96V72a7.91 7.91 0 018-8h80a7.91 7.91 0 018 8zm32 304.57A16 16 0 01320 416h-.58A16 16 0 01304 399.43l8-224a16 16 0 1132 1.14z" />
-                                                            </svg>
-                                                        </button>
                                                     </td>
                                                 </tr>
                                                 <tr class="table__row">
                                                     <td class="table__cell">
                                                         <h4 class="text text--name">Garry Green</h4>
                                                     </td>
-                                                    <td class="table__cell">
+                                                    <td class="table__cell table__cell--right table__cell--large">
                                                         <p class="text text--swift">0123456789</p>
-                                                    </td>
-                                                    <td class="table__cell table__cell--right">
-                                                        <button class="icon-button">
-                                                            <svg class="icon-button__icon"
-                                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
-                                                                fill="currentColor">
-                                                                <path
-                                                                    d="M296 64h-80a7.91 7.91 0 00-8 8v24h96V72a7.91 7.91 0 00-8-8z"
-                                                                    fill="none" />
-                                                                <path
-                                                                    d="M432 96h-96V72a40 40 0 00-40-40h-80a40 40 0 00-40 40v24H80a16 16 0 000 32h17l19 304.92c1.42 26.85 22 47.08 48 47.08h184c26.13 0 46.3-19.78 48-47l19-305h17a16 16 0 000-32zM192.57 416H192a16 16 0 01-16-15.43l-8-224a16 16 0 1132-1.14l8 224A16 16 0 01192.57 416zM272 400a16 16 0 01-32 0V176a16 16 0 0132 0zm32-304h-96V72a7.91 7.91 0 018-8h80a7.91 7.91 0 018 8zm32 304.57A16 16 0 01320 416h-.58A16 16 0 01304 399.43l8-224a16 16 0 1132 1.14z" />
-                                                            </svg>
-                                                        </button>
                                                     </td>
                                                 </tr>
                                                 <tr class="table__row">
                                                     <td class="table__cell">
                                                         <h4 class="text text--name">Owen Chapman</h4>
                                                     </td>
-                                                    <td class="table__cell">
+                                                    <td class="table__cell table__cell--right table__cell--large">
                                                         <p class="text text--swift">0123456789</p>
-                                                    </td>
-                                                    <td class="table__cell table__cell--right">
-                                                        <button class="icon-button">
-                                                            <svg class="icon-button__icon"
-                                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
-                                                                fill="currentColor">
-                                                                <path
-                                                                    d="M296 64h-80a7.91 7.91 0 00-8 8v24h96V72a7.91 7.91 0 00-8-8z"
-                                                                    fill="none" />
-                                                                <path
-                                                                    d="M432 96h-96V72a40 40 0 00-40-40h-80a40 40 0 00-40 40v24H80a16 16 0 000 32h17l19 304.92c1.42 26.85 22 47.08 48 47.08h184c26.13 0 46.3-19.78 48-47l19-305h17a16 16 0 000-32zM192.57 416H192a16 16 0 01-16-15.43l-8-224a16 16 0 1132-1.14l8 224A16 16 0 01192.57 416zM272 400a16 16 0 01-32 0V176a16 16 0 0132 0zm32-304h-96V72a7.91 7.91 0 018-8h80a7.91 7.91 0 018 8zm32 304.57A16 16 0 01320 416h-.58A16 16 0 01304 399.43l8-224a16 16 0 1132 1.14z" />
-                                                            </svg>
-                                                        </button>
                                                     </td>
                                                 </tr>
                                             </tbody>
@@ -870,10 +809,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="grid__item grid__item--col-span-2">
-                        <h3 class="text text--title">RIB du déstinataire</h3>
-                        <input class="input" type="text" placeholder="Entrer le RIB du déstinataire...">
                     </div>
                     <div class="grid__item grid__item--col-span-2">
                         <h3 class="text text--title">Référence du transfert</h3>
