feat: add spacing

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="view" id="tab-content-1">
                 <div class="grid grid--account">
                     <section class="grid__section">
-                        <h3 class="text text--subtitle text--margin">Propriétaire du compte</h3>
+                        <h3 class="text text--subtitle">Propriétaire du compte</h3>
                         <p class="text text--name">Hubert Bonisseur de La Bath</p>
                     </section>
                     <section class="grid__section grid__section--row-span-4">
@@ -94,7 +94,7 @@
                         </div>
                     </section>
                     <section class="grid__section">
-                        <h3 class="text text--subtitle text--margin">Code SWIFT</h3>
+                        <h3 class="text text--subtitle">Code SWIFT</h3>
                         <p class="text text--number">0123456789</p>
                     </section>
                     <section class="grid__section">
@@ -108,13 +108,13 @@
                         </div>
                     </section>
                     <section class="grid__section">
-                        <h3 class="text text--subtitle text--margin">Ajouter un code SWIFT</h3>
+                        <h3 class="text text--subtitle">Ajouter un code SWIFT</h3>
                         <div class="grid grid--auto-height">
                             <div class="grid__section grid__section--fluid">
                                 <input class="input" type="text" placeholder="Entrer le code SWIFT">
                             </div>
                             <div class="grid__section grid__section--fluid">
-                                <button class="button">
+                                <button class="button button--primary">
                                     <span class="button__label">Ajouter</span>
                                 </button>
                             </div>
@@ -128,20 +128,21 @@
                 <div class="grid grid--operation">
                     <div class="grid__section">
                         <h2 class="text text--title">Effectuer un dépot</h2>
-                        <h3 class="text text--subtitle text--margin">Montant du dépot</h3>
-                        <input class="input" type="text" placeholder="Entrer le montant du dépot">
+                        <h3 class="text text--subtitle">Montant du dépot</h3>
+                        <input class="input input--margin" type="text" placeholder="Entrer le montant du dépot">
                         <div class="grid grid--auto-height">
                             <div class="grid__section">
-                                <button class="button">
+                                <button class="button button--primary">
                                     <span class="button__label">Déposer</span>
                                 </button>
                             </div>
                             <div class="grid__section">
-                                <button class="button">
+                                <button class="button button--secondary">
                                     <span class="button__label">Tout déposer</span>
                                 </button>
                             </div>
                         </div>
+                        <div class="divider"></div>
                     </div>
                     <div class="grid__section grid__section--row-span-2">
                         <div class="column">
@@ -155,9 +156,9 @@
                     </div>
                     <div class="grid__section">
                         <h2 class="text text--title">Effectuer un retrait</h2>
-                        <h3 class="text text--subtitle text--margin">Montant du retrait</h3>
-                        <input class="input" type="text" placeholder="Entrer le montant du retrait">
-                        <button class="button">
+                        <h3 class="text text--subtitle">Montant du retrait</h3>
+                        <input class="input input--margin" type="text" placeholder="Entrer le montant du retrait">
+                        <button class="button button--primary button--half">
                             <span class="button__label">Retirer</span>
                         </button>
                     </div>
@@ -169,19 +170,19 @@
                 <div class="grid grid--transfer">
                     <div class="grid__section">
                         <h2 class="text text--title">Effectuer un transfert</h2>
-                        <div class="grid grid--auto-height">
+                        <div class="grid grid--auto-height grid--margin">
                             <div class="grid__section">
-                                <h3 class="text text--subtitle text--margin">Montant du transfert</h3>
+                                <h3 class="text text--subtitle">Montant du transfert</h3>
                                 <input class="input" type="text" placeholder="Entrer le montant du transfert">
                             </div>
                             <div class="grid__section">
-                                <h3 class="text text--subtitle text--margin">Code SWIFT du déstinataire</h3>
+                                <h3 class="text text--subtitle">Code SWIFT du déstinataire</h3>
                                 <input class="input" type="text" placeholder="Entrer le code SWIFT du déstinataire">
                             </div>
                         </div>
-                        <h3 class="text text--subtitle text--margin">Référence du transfert</h3>
-                        <input class="input" type="text" placeholder="Entrer la référence du transfert">
-                        <button class="button">
+                        <h3 class="text text--subtitle">Référence du transfert</h3>
+                        <input class="input input--margin-lg" type="text" placeholder="Entrer la référence du transfert">
+                        <button class="button button--primary button--half">
                             <span class="button__label">Transférer</span>
                         </button>                 
                     </div>
@@ -204,18 +205,19 @@
                     <div class="grid__section">
                         <div class="grid grid--auto-height">
                             <div class="grid__section">
-                                <h3 class="text text--subtitle text--margin">Solde de l'entreprise</h3>
+                                <h3 class="text text--subtitle">Solde de l'entreprise</h3>
                                 <p class="text text--number">25,000,000$</p>
                             </div>
                             <div class="grid__section">
-                                <h3 class="text text--subtitle text--margin">Code SWIFT de l'entreprise</h3>
+                                <h3 class="text text--subtitle">Code SWIFT de l'entreprise</h3>
                                 <p class="text text--number">0123456789</p>
                             </div>
                             <div class="grid__section grid__section--col-span-2">
-                                <h3 class="text text--subtitle text--margin">Propriétaire de l'entreprise</h3>
+                                <h3 class="text text--subtitle">Propriétaire de l'entreprise</h3>
                                 <p class="text text--name">Garry Green</p>
                             </div>
                         </div>
+                        <div class="divider"></div>
                     </div>
                     <div class="grid__section grid__section--row-span-3">
                         <div class="column">
@@ -229,26 +231,27 @@
                     </div>
                     <div class="grid__section">
                         <h2 class="text text--title">Effectuer un dépot</h2>
-                        <h3 class="text text--subtitle text--margin">Montant du dépot</h3>
-                        <input class="input" type="text" placeholder="Entrer le montant du dépot">
-                        <div class="grid grid-auto-height">
+                        <h3 class="text text--subtitle">Montant du dépot</h3>
+                        <input class="input input--margin" type="text" placeholder="Entrer le montant du dépot">
+                        <div class="grid grid--auto-height">
                             <div class="grid__section">
-                                <button class="button">
+                                <button class="button button--primary">
                                     <span class="button__label">Déposer</span>
                                 </button>
                             </div>
                             <div class="grid__section">
-                                <button class="button">
+                                <button class="button button--secondary">
                                     <span class="button__label">Tout déposer</span>
                                 </button>
                             </div>
                         </div>
+                        <div class="divider"></div>
                     </div>
                     <div class="grid__section">
                         <h2 class="text text--title">Effectuer un retrait</h2>
-                        <h3 class="text text--subtitle text--margin">Montant du retrait</h3>
-                        <input class="input" type="text" placeholder="Entrer le montant du retrait">
-                        <button class="button">
+                        <h3 class="text text--subtitle">Montant du retrait</h3>
+                        <input class="input input--margin" type="text" placeholder="Entrer le montant du retrait">
+                        <button class="button button--primary button--half">
                             <span class="button__label">Retirer</span>
                         </button>
                     </div>
