--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                             </div>
                             <div class="grid__section grid__section--col-span-2">
                                 <h3 class="text text--subtitle">Propriétaire de l'entreprise</h3>
-                                <p class="text text--name">Garry Green</p>
+                                <p class="text text--name">Hubert Bonisseur de La Bath</p>
                             </div>
                         </div>
                         <div class="divider"></div>
