--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="grid grid--account">
                     <section class="grid__section">
                         <h3 class="text text--subtitle">Propriétaire du compte</h3>
-                        <p class="text text--name">Hubert Bonisseur de La Bath</p>
+                        <p class="text text--account-name">Hubert Bonisseur de La Bath</p>
                     </section>
                     <section class="grid__section grid__section--row-span-4">
                         <div class="column">
@@ -355,7 +355,7 @@
                         <div class="grid grid--auto-height">
                             <div class="grid__section">
                                 <h3 class="text text--subtitle">Solde de l'entreprise</h3>
-                                <p class="text text--number">25,000,000$</p>
+                                <p class="text text--number text--increase">25,000,000$</p>
                             </div>
                             <div class="grid__section">
                                 <h3 class="text text--subtitle">Code SWIFT de l'entreprise</h3>
