feat: add offshore tab and tab content

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <input class="app__tab-selector" type="radio" name="tab-selector" id="tab-selector-2">
             <input class="app__tab-selector" type="radio" name="tab-selector" id="tab-selector-3">
             <input class="app__tab-selector" type="radio" name="tab-selector" id="tab-selector-4">
+            <input class="app__tab-selector" type="radio" name="tab-selector" id="tab-selector-5">
 
             <!-- Bar -->
             <header class="bar">
@@ -374,7 +375,15 @@
                                 <h3 class="text text--subtitle">Historique des opérations</h3>
                             </div>
                             <div class="column__section column__section--fluid">
-                                <div class="paper"></div>
+                                <div class="paper">
+                                    <div class="paper__frame"></div>
+                                    <label class="icon-button icon-button--lg icon-button--border paper__button" for="tab-selector-5" id="tab-5">
+                                        <svg class="icon-button__icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor">
+                                            <path d="M0 0h24v24H0z" fill="none"/>
+                                            <path d="M13.127 14.56l1.43-1.43 6.44 6.443L19.57 21zm4.293-5.73l2.86-2.86c-3.95-3.95-10.35-3.96-14.3-.02 3.93-1.3 8.31-.25 11.44 2.88zM5.95 5.98c-3.94 3.95-3.93 10.35.02 14.3l2.86-2.86C5.7 14.29 4.65 9.91 5.95 5.98zm.02-.02l-.01.01c-.38 3.01 1.17 6.88 4.3 10.02l5.73-5.73c-3.13-3.13-7.01-4.68-10.02-4.3z"/>
+                                        </svg>
+                                    </label>
+                                </div>
                             </div>
                         </div>
                     </section>
@@ -405,6 +414,11 @@
                         </button>
                     </section>
                 </div>
+            </div>
+
+            <!-- View / offshore -->
+            <div class="view" id="tab-content-5">
+                <h2 class="text text--title">Compte Offshore</h2>
             </div>
         </div>
 
