fix: fix offshore balance label

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                     <!-- Offshore balance -->
                     <section class="grid__section grid__section--with-border">
                         <div class="section">
-                            <h3 class="section__title">Solde de du compte offshore</h3>
+                            <h3 class="section__title">Solde du compte offshore</h3>
                             <p class="section__number">152,000,000$</p>
                         </div>
                     </section>
