--- a/index.html
+++ b/index.html
@@ -143,24 +143,8 @@
                                                     <p class="text text--date">0123456789</p>
                                                 </td>
                                                 <td class="table__cell table__cell--right">
-                                                    <button class="icon-button icon-button--sm">
-                                                        <svg class="icon-button__icon"
-                                                            xmlns="http://www.w3.org/2000/svg"
-                                                            viewBox="0 0 512 512">
-                                                            <path
-                                                                d="M112 112l20 320c.95 18.49 14.4 32 32 32h184c17.67 0 30.87-13.51 32-32l20-320"
-                                                                fill="none" stroke="currentColor"
-                                                                stroke-linecap="round" stroke-linejoin="round"
-                                                                stroke-width="32" />
-                                                            <path stroke="currentColor" stroke-linecap="round"
-                                                                stroke-miterlimit="10" stroke-width="32"
-                                                                d="M80 112h352" />
-                                                            <path
-                                                                d="M192 112V72h0a23.93 23.93 0 0124-24h80a23.93 23.93 0 0124 24h0v40M256 176v224M184 176l8 224M328 176l-8 224"
-                                                                fill="none" stroke="currentColor"
-                                                                stroke-linecap="round" stroke-linejoin="round"
-                                                                stroke-width="32" />
-                                                        </svg>
+                                                    <button class="icon icon--button">
+                                                        <img class="icon__image" src="/src/assets/images/trash.svg" alt="delete icon">
                                                     </button>
                                                 </td>
                                             </tr>
@@ -261,7 +245,67 @@
                         <div class="section section--column">
                             <h3 class="section__title">Liste des codes SWIFT</h3>
                             <div class="paper section__body">
-                                <div class="paper__frame"></div>
+                                <div class="paper__frame">
+                                    <table class="table">
+                                        <tbody>
+                                            <tr class="table__row">
+                                                <td class="table__cell">
+                                                    <h4 class="text text--entity">Lena Silvo</h4>
+                                                    <p class="text text--date">0123456789</p>
+                                                </td>
+                                                <td class="table__cell table__cell--right">
+                                                    <button class="icon icon--button">
+                                                        <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr class="table__row">
+                                                <td class="table__cell">
+                                                    <h4 class="text text--entity">Owen Chapman</h4>
+                                                    <p class="text text--date">0123456789</p>
+                                                </td>
+                                                <td class="table__cell table__cell--right">
+                                                    <button class="icon icon--button">
+                                                        <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr class="table__row">
+                                                <td class="table__cell">
+                                                    <h4 class="text text--entity">Garry Green</h4>
+                                                    <p class="text text--date">0123456789</p>
+                                                </td>
+                                                <td class="table__cell table__cell--right">
+                                                    <button class="icon icon--button">
+                                                        <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr class="table__row">
+                                                <td class="table__cell">
+                                                    <h4 class="text text--entity">Arthur Popov</h4>
+                                                    <p class="text text--date">0123456789</p>
+                                                </td>
+                                                <td class="table__cell table__cell--right">
+                                                    <button class="icon icon--button">
+                                                        <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr class="table__row">
+                                                <td class="table__cell">
+                                                    <h4 class="text text--entity">Quentin Cooper</h4>
+                                                    <p class="text text--date">0123456789</p>
+                                                </td>
+                                                <td class="table__cell table__cell--right">
+                                                    <button class="icon icon--button">
+                                                        <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </section>
